--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["= <=>"]
 
 [dependencies]
 colored = "*"
-hyper = "*"
-select = "*"
+futures = "0.1.14"
+hyper = "0.11"
+select = "0.4.0"
+tokio-core = "0.1"
 
