--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,6 @@ authors = ["= <=>"]
 
 [dependencies]
 colored = "*"
-futures = "0.1.14"
-hyper = "0.11"
 select = "0.4.0"
-tokio-core = "0.1"
+reqwest = "0.6.2"
 
